SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/kjots/plasmoid/; revision=1204799

--- a/korgac/korgacagent.desktop
+++ b/korgac/korgacagent.desktop
@@ -4,6 +4,8 @@ Name[en_GB]=Reminder Dæmon
 Name[et]=Meeldetuletuste deemon
 Name[fr]=Démon d'alarme
 Name[ia]=Demone de Memento
+Name[kk]=Еске салу қызметі
+Name[km]=ដេមិន​កម្មវិធី​រំលឹក
 Name[nl]=Herinneringsdaemon
 Name[pt]=Servidor de Chamadas de Atenção
 Name[pt_BR]=Servidor de Lembretes
@@ -16,6 +18,8 @@ Comment[en_GB]=Event and task reminder dæmon
 Comment[et]=Sündmuste ja ülesannete meeldetuletuste deemon
 Comment[fr]=Démon de rappel des tâches et évènements
 Comment[ia]=Demone de memento pro carga e evento
+Comment[kk]=Оқиға мен тапсырма туралы еске салу қызметі
+Comment[km]=ដេមិន​កម្មវិធី​រំលឹក​​ភារកិច្ច និង​ព្រឹត្តិការណ៍
 Comment[nl]=Herinneringsdaemon voor evenementen en taken
 Comment[pt]=Servidor de chamada de atenção dos eventos e tarefas
 Comment[pt_BR]=Servidor de lembretes dos eventos e tarefas
