--- a/plugins/printing/list/listprint.desktop
+++ b/plugins/printing/list/listprint.desktop
@@ -76,7 +76,7 @@ Comment[is]=Þetta íforrit gerir þér kleyft að prenta út lista með atburð
 Comment[it]=Questa estensione ti permette di stampare eventi e cose da fare in modalità elenco.
 Comment[ja]=このプラグインにより、リストフォーム内のイベントや To-Do を印刷できるようになります。
 Comment[ka]=ეს მოდული საშუალებას გაძლევთ სიის ფორმით ამობეჭდოთ მოვლენები და დავალებები.
-Comment[kk]=Бұл оқиғалар мен жоспарларды тізім түрінде басатын плагині.
+Comment[kk]=Бұл оқиғалар мен істерді тізім түрінде басатын плагині.
 Comment[km]=កម្មវិធី​ជំនួយ​នេះ​អនុញ្ញាត​ឲ្យ​អ្នក​បោះពុម្ព​ព្រឹត្តិការណ៍ និង ការងារ​ត្រូវ​ធ្វើក្នុង​ទម្រង់​ជា​បញ្ជី ។
 Comment[ko]=이 플러그인은 할 일과 기념일을 목록 형태로 인쇄할 수 있도록 해 줍니다.
 Comment[lt]=Šis įskiepis leidžia spausdinti įvykius ir darbus sąrašo forma.
