--- a/plugins/picoftheday/picoftheday.desktop
+++ b/plugins/picoftheday/picoftheday.desktop
@@ -33,7 +33,7 @@ Name[nn]=Kalender-programtillegg for dagens bilete frå Wikipedia
 Name[pa]=ਕੈਲੰਡਰ ਲਈ ਦਿਨ ਦੀ ਵਿਕਿਪੀਡਿਆ ਤਸਵੀਰ ਪਲੱਗਇਨ
 Name[pl]=Grafika na medal z Wikipedii
 Name[pt]='Plugin' de Imagem do Dia do Wikipédia para Calendários
-Name[pt_BR]=Plug-in de Imagem do Dia da Wikipedia para Calendários
+Name[pt_BR]=Plug-in de Imagem do Dia da Wikipédia para Calendários
 Name[ru]=Изображение дня с Wikipedia для календаря
 Name[sl]=Vstavek za Wikipedijin »Slika dneva« za koledarje
 Name[sv]=Insticksprogram för kalendrar med 'Dagens bild' från Wikipedia
@@ -71,7 +71,7 @@ Comment[nl]=Deze plugin geeft de Wikipedia-afbeelding van de dag
 Comment[nn]=Dette programtillegget viser dagens bilete frå Wikipedia.
 Comment[pl]=Wtyczka dostarcza Obrazek Dnia Wikipedii
 Comment[pt]=Este 'plugin' oferece a Imagem do Dia do Wikipédia
-Comment[pt_BR]=Este plug-in oferece a Imagem do Dia da Wikipedia
+Comment[pt_BR]=Este plug-in oferece a Imagem do Dia da Wikipédia
 Comment[ru]=Изображение дня с Wikipedia для календаря
 Comment[sl]=Ta vstavek ponuja sliko dneva z Wikipedije
 Comment[sv]=Insticksprogrammet tillhandahåller Wikipedias 'Dagens bild'
