SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/examples/mailreader/; revision=1206038

--- a/korgac/korgac.desktop
+++ b/korgac/korgac.desktop
@@ -74,7 +74,7 @@ GenericName[fi]=KOrganizer hälytyspalvelimen asiakas
 GenericName[fr]=Client pour le démon d'alarme de KOrganizer
 GenericName[fy]=KOrganizer omtinkerdaemon
 GenericName[ga]=Cliant Deamhain Meabhrúchán KOrganizer
-GenericName[gl]=Cliente do Servizo de Lembranzas do KOrganizer
+GenericName[gl]=Cliente do servizo de lembranzas do KOrganizer
 GenericName[hu]=KOrganizer emlékeztető szolgáltatás kliense
 GenericName[ia]=Cliente Daemon pro rememoration in KOrganizer
 GenericName[is]=Áminningarpúki fyrir KOrganizer
