--- a/korgac/korgacagent.desktop
+++ b/korgac/korgacagent.desktop
@@ -4,6 +4,7 @@ Name[ca]=Dimoni de recordatoris
 Name[en_GB]=Reminder Dæmon
 Name[et]=Meeldetuletuste deemon
 Name[fr]=Démon d'alarme
+Name[gl]=Daemon do servizo de lembranzas
 Name[ia]=Demone de Memento
 Name[kk]=Еске салу қызметі
 Name[km]=ដេមិន​កម្មវិធី​រំលឹក
@@ -19,6 +20,7 @@ Comment[ca]=Dimoni de recordatoris de tasques i esdeveniments
 Comment[en_GB]=Event and task reminder dæmon
 Comment[et]=Sündmuste ja ülesannete meeldetuletuste deemon
 Comment[fr]=Démon de rappel des tâches et évènements
+Comment[gl]=Daemon que lembra de eventos e tarefas
 Comment[ia]=Demone de memento pro carga e evento
 Comment[kk]=Оқиға мен тапсырма туралы еске салу қызметі
 Comment[km]=ដេមិន​កម្មវិធី​រំលឹក​​ភារកិច្ច និង​ព្រឹត្តិការណ៍
