--- a/korganizer_part.rc
+++ b/korganizer_part.rc
@@ -178,20 +178,8 @@
   </Menu>
 
   <Menu name="akonadi_collectionview_contextmenu">
-    <!--
     <Action name="akonadi_collection_create"/>
-    <Separator/>
-    <Action name="akonadi_collection_copy"/>
-    <Action name="akonadi_paste"/>
-    <Separator/>
     <Action name="akonadi_collection_delete"/>
-    <Separator/>
-    <Action name="akonadi_collection_sync"/>
-    <Separator/>
-    -->
-    <Action name="akonadi_calendar_create"/>
-    <Action name="edit_calendar"/>
-    <Action name="akonadi_calendar_delete"/>
     <Separator/>
       <Menu name="calendar_color"><text>Calendar Colors</text>
       <Action name="assign_color"/>
@@ -200,8 +188,16 @@
     <Separator/>
     <Action name="set_standard_calendar"/>
     <Separator/>
+    <Action name="akonadi_collection_cut"/>
+    <Action name="akonadi_collection_copy"/>
+    <Action name="akonadi_paste"/>
+    <Separator/>
+    <Action name="akonadi_resource_create"/>
+    <Action name="akonadi_resource_delete"/>
+    <Action name="akonadi_collection_sync"/>
+    <Separator/>
     <Action name="akonadi_collection_properties"/>
-
-</Menu>
+    <Action name="akonadi_resource_properties"/>
+  </Menu>
 
 </kpartgui>
