SVN_SILENT made messages (.desktop file)

--- a/korgac/korgacagent.desktop
+++ b/korgac/korgacagent.desktop
@@ -27,6 +27,7 @@ Comment[et]=Sündmuste ja ülesannete meeldetuletuste deemon
 Comment[fr]=Démon de rappel des tâches et évènements
 Comment[gl]=Daemon que lembra de eventos e tarefas
 Comment[ia]=Demone de memento pro carga e evento
+Comment[it]=Demone degli avvisi di eventi e attività
 Comment[kk]=Оқиға мен тапсырма туралы еске салу қызметі
 Comment[km]=ដេមិន​កម្មវិធី​រំលឹក​​ភារកិច្ច និង​ព្រឹត្តិការណ៍
 Comment[nl]=Herinneringsdaemon voor evenementen en taken
