SVN_SILENT made messages (.desktop file)

--- a/korgac/korgacagent.desktop
+++ b/korgac/korgacagent.desktop
@@ -17,6 +17,7 @@ Name[pa]=ਰੀਮਾਈਡਰ ਡੈਮਨ
 Name[pt]=Servidor de Chamadas de Atenção
 Name[pt_BR]=Servidor de Lembretes
 Name[sv]=Påminnelsedemon
+Name[tr]=Hatırlatma Servisi
 Name[uk]=Фонова служба нагадування
 Name[x-test]=xxReminder Daemonxx
 Name[zh_TW]=提醒守護程式
@@ -36,6 +37,7 @@ Comment[nl]=Herinneringsdaemon voor evenementen en taken
 Comment[pt]=Servidor de chamada de atenção dos eventos e tarefas
 Comment[pt_BR]=Servidor de lembretes dos eventos e tarefas
 Comment[sv]=Påminnelsedemon för händelser och uppgifter
+Comment[tr]=Olay ve iş hatırlatma servisi
 Comment[uk]=Фонова служба нагадування про події і завдання
 Comment[x-test]=xxEvent and task reminder daemonxx
 Comment[zh_TW]=事件與工作提醒守護程式
