SVN_SILENT made messages (.desktop file)

--- a/korgac/korgacagent.desktop
+++ b/korgac/korgacagent.desktop
@@ -12,6 +12,7 @@ Name[ia]=Demone de Memento
 Name[it]=Demone degli avvisi
 Name[kk]=Еске салу қызметі
 Name[km]=ដេមិន​កម្មវិធី​រំលឹក
+Name[nb]=Påminnelsesnisse
 Name[nl]=Herinneringsdaemon
 Name[pa]=ਰੀਮਾਈਡਰ ਡੈਮਨ
 Name[pt]=Servidor de Chamadas de Atenção
@@ -24,6 +25,7 @@ Name[zh_TW]=提醒守護程式
 Comment=Event and task reminder daemon
 Comment[ca]=Dimoni de recordatoris de tasques i esdeveniments
 Comment[ca@valencia]=Dimoni de recordatoris de tasques i esdeveniments
+Comment[de]=Erinnerungsdienst für Ereignisse und Termine
 Comment[en_GB]=Event and task reminder dæmon
 Comment[es]=Demonio de recordatorio de eventos y tareas
 Comment[et]=Sündmuste ja ülesannete meeldetuletuste deemon
@@ -33,6 +35,7 @@ Comment[ia]=Demone de memento pro carga e evento
 Comment[it]=Demone degli avvisi di eventi e attività
 Comment[kk]=Оқиға мен тапсырма туралы еске салу қызметі
 Comment[km]=ដេមិន​កម្មវិធី​រំលឹក​​ភារកិច្ច និង​ព្រឹត្តិការណ៍
+Comment[nb]=Nisse for påminnelser om hendelser og oppgaver
 Comment[nl]=Herinneringsdaemon voor evenementen en taken
 Comment[pt]=Servidor de chamada de atenção dos eventos e tarefas
 Comment[pt_BR]=Servidor de lembretes dos eventos e tarefas
