SVN_SILENT made messages (.desktop file)

--- a/korgac/korgacagent.desktop
+++ b/korgac/korgacagent.desktop
@@ -12,6 +12,7 @@ Name[ia]=Demone de Memento
 Name[it]=Demone degli avvisi
 Name[kk]=Еске салу қызметі
 Name[km]=ដេមិន​កម្មវិធី​រំលឹក
+Name[lt]=Priminimų tarnyba
 Name[nb]=Påminnelsesnisse
 Name[nl]=Herinneringsdaemon
 Name[pa]=ਰੀਮਾਈਡਰ ਡੈਮਨ
@@ -35,6 +36,7 @@ Comment[ia]=Demone de memento pro carga e evento
 Comment[it]=Demone degli avvisi di eventi e attività
 Comment[kk]=Оқиға мен тапсырма туралы еске салу қызметі
 Comment[km]=ដេមិន​កម្មវិធី​រំលឹក​​ភារកិច្ច និង​ព្រឹត្តិការណ៍
+Comment[lt]=Įvykių ir užduočių priminimų tarnyba
 Comment[nb]=Nisse for påminnelser om hendelser og oppgaver
 Comment[nl]=Herinneringsdaemon voor evenementen en taken
 Comment[pt]=Servidor de chamada de atenção dos eventos e tarefas
