--- a/dbuscalendar.desktop
+++ b/dbuscalendar.desktop
@@ -64,6 +64,7 @@ Comment[it]=Agenda con un'interfaccia D-Bus
 Comment[ja]=D-Bus インターフェースを持つカレンダー
 Comment[kk]=D-BUS интерфейсті Ұйымдастырғыш
 Comment[km]=កម្មវិធី​រៀបចំ​ជាមួយ​ចំណុច​ប្រទាក់ D-Bus
+Comment[lt]=Tvarkyklė su D-Bus sąsaja
 Comment[lv]=Organizators ar D-BUS saskarni
 Comment[nb]=Organizer med D-Bus-grensesnitt
 Comment[nds]=En Daagpleger mit en D-Bus-Koppelsteed
