--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,8 +10,10 @@ set(korgplugins_SRCS korgplugins.cpp )
 
 
 kde4_add_executable(korgplugins TEST ${korgplugins_SRCS})
+kde4_add_executable(testkodaymatrix TEST testkodaymatrix.cpp ../kodaymatrix.cpp)
 
 target_link_libraries(korgplugins korganizerprivate korganizer_core ${KDE4_KIO_LIBS} ${KDEPIMLIBS_KHOLIDAYS_LIBS} )
+target_link_libraries(testkodaymatrix korganizerprivate korganizer_core ${QT_QTTEST_LIBRARY})
 
 kde4_add_executable(testkcmdesignerfields TEST testkcmdesignerfields.cpp ../kcmdesignerfields.cpp )
 target_link_libraries(testkcmdesignerfields
