SVN_SILENT made messages (.desktop file)

--- a/korgac/korgacagent.desktop
+++ b/korgac/korgacagent.desktop
@@ -10,6 +10,7 @@ Name[fr]=Démon d'alarme
 Name[gl]=Daemon do servizo de lembranzas
 Name[ia]=Demone de Memento
 Name[it]=Demone degli avvisi
+Name[ja]=リマインダデーモン
 Name[kk]=Еске салу қызметі
 Name[km]=ដេមិន​កម្មវិធី​រំលឹក
 Name[lt]=Priminimų tarnyba
