--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,10 +10,30 @@ set(korgplugins_SRCS korgplugins.cpp )
 
 
 kde4_add_executable(korgplugins TEST ${korgplugins_SRCS})
+
+target_link_libraries(korgplugins
+                      korganizerprivate
+                      korganizer_core 
+                      ${KDE4_KIO_LIBS}
+                      ${KDEPIMLIBS_KHOLIDAYS_LIBS}
+                      )
+
+########### next target ###############
+
 kde4_add_executable(testkodaymatrix TEST testkodaymatrix.cpp ../kodaymatrix.cpp)
 
-target_link_libraries(korgplugins korganizerprivate korganizer_core ${KDE4_KIO_LIBS} ${KDEPIMLIBS_KHOLIDAYS_LIBS} )
-target_link_libraries(testkodaymatrix korganizerprivate korganizer_core ${QT_QTTEST_LIBRARY} ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY})
+target_link_libraries(testkodaymatrix
+                      korganizerprivate
+                      korganizer_core 
+                      calendarsupport
+                      ${QT_QTTEST_LIBRARY} 
+                      ${QT_QTCORE_LIBRARY}
+                      ${QT_QTGUI_LIBRARY}
+                      ${KDEPIMLIBS_KCALCORE_LIBS}
+                      ${KDEPIMLIBS_AKONADI_LIBS}
+                      )
+
+########### next target ###############
 
 kde4_add_executable(testkcmdesignerfields TEST testkcmdesignerfields.cpp ../kcmdesignerfields.cpp )
 target_link_libraries(testkcmdesignerfields
