Opening an event editor when double clicking a reminder works again.
It was broken somewhen during the akonadi port.
Now korgac links directly to libincidenceeditors, no need to start korganizer.

CCMAIL: adam@kde.org
Till, As usual, please test the mac build

--- a/korgac/CMakeLists.txt
+++ b/korgac/CMakeLists.txt
@@ -71,6 +71,7 @@ target_link_libraries(korgac
   ${KDEPIMLIBS_KCALUTILS_LIBS} 
   kdepim
   kdepimdbusinterfaces
+  incidenceeditorsng
 )
 
 if (RUNTIME_PLUGINS_STATIC)
