SVN_SILENT made messages (.desktop file)

--- a/korgac/korgac.desktop
+++ b/korgac/korgac.desktop
@@ -21,6 +21,7 @@ Name[fr]=Client d'alarme de KOrganizer
 Name[fy]=KOrganizer omtinkerdaemon
 Name[ga]=Cliant Meabhrúchán KOrganizer
 Name[gl]=Cliente de lembranzas do KOrganizer
+Name[hr]=Klijent podsjetnik KOrganizer
 Name[hu]=KOrganizer-emlékeztető kliens
 Name[ia]=Cliente pro rememoration in KOrganizer
 Name[is]=Áminningarforrit fyrir KOrganizer
@@ -75,6 +76,7 @@ GenericName[fr]=Client pour le démon d'alarme de KOrganizer
 GenericName[fy]=KOrganizer omtinkerdaemon
 GenericName[ga]=Cliant Deamhain Meabhrúchán KOrganizer
 GenericName[gl]=Cliente do servizo de lembranzas do KOrganizer
+GenericName[hr]=Klijent podsjetnik KOrganizer
 GenericName[hu]=KOrganizer emlékeztető szolgáltatás kliense
 GenericName[ia]=Cliente Daemon pro rememoration in KOrganizer
 GenericName[is]=Áminningarpúki fyrir KOrganizer
