--- a/korganizer.desktop
+++ b/korganizer.desktop
@@ -151,6 +151,7 @@ GenericName[fy]=Persoanlike organizer
 GenericName[ga]=Eagraí Pearsanta
 GenericName[gl]=Organizador persoal
 GenericName[he]=מנהל זמן אישי
+GenericName[hr]=Osobni planer
 GenericName[hu]=Határidőnapló
 GenericName[ia]=Organisator personal
 GenericName[is]=Persónuleg skipulagsbók
