--- a/korgac/korgacagent.desktop
+++ b/korgac/korgacagent.desktop
@@ -8,6 +8,7 @@ Name[es]=Demonio de recordatorio
 Name[et]=Meeldetuletuste deemon
 Name[fr]=Démon d'alarme
 Name[gl]=Daemon do servizo de lembranzas
+Name[hr]=Podsjetnik
 Name[ia]=Demone de Memento
 Name[it]=Demone degli avvisi
 Name[ja]=リマインダデーモン
@@ -33,6 +34,7 @@ Comment[es]=Demonio de recordatorio de eventos y tareas
 Comment[et]=Sündmuste ja ülesannete meeldetuletuste deemon
 Comment[fr]=Démon de rappel des tâches et évènements
 Comment[gl]=Daemon que lembra de eventos e tarefas
+Comment[hr]=Servis za događanja i podsjetnik na zadatke
 Comment[ia]=Demone de memento pro carga e evento
 Comment[it]=Demone degli avvisi di eventi e attività
 Comment[kk]=Оқиға мен тапсырма туралы еске салу қызметі
