--- a/korgac/korgacagent.desktop
+++ b/korgac/korgacagent.desktop
@@ -2,6 +2,7 @@
 Name=Reminder Daemon
 Name[ca]=Dimoni de recordatoris
 Name[ca@valencia]=Dimoni de recordatoris
+Name[da]=Påmindelsedæmon
 Name[de]=Erinnerungsmodul
 Name[en_GB]=Reminder Dæmon
 Name[es]=Demonio de recordatorio
@@ -28,6 +29,7 @@ Name[zh_TW]=提醒守護程式
 Comment=Event and task reminder daemon
 Comment[ca]=Dimoni de recordatoris de tasques i esdeveniments
 Comment[ca@valencia]=Dimoni de recordatoris de tasques i esdeveniments
+Comment[da]=Påmindelsedæmon til begivenheder og opgaver
 Comment[de]=Erinnerungsdienst für Ereignisse und Termine
 Comment[en_GB]=Event and task reminder dæmon
 Comment[es]=Demonio de recordatorio de eventos y tareas
