Add config option to choose which icons are displayed in items.
There's also a new icon, "Calendar's custom icon", you no longer
need to rely only on color to distinguish calendars. The icon
comes from the akonadi agent, you can override that in
akonadiconsole though.

Recurring and reminder icons are back, they were commented due
to lack of space.

Go the config dialog under views->agenda, and views->month and
choose which icons you like.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,6 +95,7 @@ if (KDEPIM_BUILD_DESKTOP)
   set(kcm_korganizer_PART_SRCS
       kcmdesignerfields.cpp
       koprefsdialog.cpp
+      kitemiconcheckcombo.cpp
      )
 
   kde4_add_plugin(kcm_korganizer ${kcm_korganizer_PART_SRCS} )
