SVN_SILENT made messages (.desktop file)

--- a/korgac/korgacagent.desktop
+++ b/korgac/korgacagent.desktop
@@ -17,6 +17,7 @@ Name[kk]=Еске салу қызметі
 Name[km]=ដេមិន​កម្មវិធី​រំលឹក
 Name[lt]=Priminimų tarnyba
 Name[nb]=Påminnelsesnisse
+Name[nds]=Anstötendämoon
 Name[nl]=Herinneringsdaemon
 Name[pa]=ਰੀਮਾਈਡਰ ਡੈਮਨ
 Name[pt]=Servidor de Chamadas de Atenção
@@ -43,6 +44,7 @@ Comment[kk]=Оқиға мен тапсырма туралы еске салу қ
 Comment[km]=ដេមិន​កម្មវិធី​រំលឹក​​ភារកិច្ច និង​ព្រឹត្តិការណ៍
 Comment[lt]=Įvykių ir užduočių priminimų tarnyba
 Comment[nb]=Nisse for påminnelser om hendelser og oppgaver
+Comment[nds]=Anstötendämoon för Begeefnissen un Opgaven
 Comment[nl]=Herinneringsdaemon voor evenementen en taken
 Comment[pt]=Servidor de chamada de atenção dos eventos e tarefas
 Comment[pt_BR]=Servidor de lembretes dos eventos e tarefas
