--- a/kcmconfigs/korganizer_configmain.desktop
+++ b/kcmconfigs/korganizer_configmain.desktop
@@ -19,6 +19,7 @@ Name[ar]=عام
 Name[be]=Агульныя
 Name[bg]=Общи
 Name[br]=Pennañ
+Name[bs]=Općenito
 Name[ca]=General
 Name[ca@valencia]=General
 Name[cs]=Obecné
@@ -82,6 +83,7 @@ Comment[af]=KOrganizer hoof opstelling
 Comment[ar]=اعدادات برنامج المنظم الرئيسية
 Comment[bg]=Главни настройки за KOrganizer
 Comment[br]=Kefluniadur kentañ KOrganizer
+Comment[bs]=Konfiguracija Glavnog dijela KOrganizatora
 Comment[ca]=Configuració principal a KOrganizer
 Comment[ca@valencia]=Configuració principal a KOrganizer
 Comment[cs]=Hlavní nastavení KOrganizeru
