SVN_SILENT made messages (.desktop file)

--- a/kcmconfigs/korganizer_configfreebusy.desktop
+++ b/kcmconfigs/korganizer_configfreebusy.desktop
@@ -68,6 +68,7 @@ Name[ta]=சுதந்திரமான/வேலையில் இருக
 Name[tg]=Озод/машғул аст
 Name[th]=ว่าง/ไม่ว่าง
 Name[tr]=Boş/Meşgul
+Name[ug]=بىكار/ئالدىراش
 Name[uk]=Вільний/зайнятий час
 Name[uz]=Boʻsh/Band
 Name[uz@cyrillic]=Бўш/Банд
