--- a/kcmconfigs/korganizer_configplugins.desktop
+++ b/kcmconfigs/korganizer_configplugins.desktop
@@ -70,6 +70,7 @@ Name[sv]=Insticksprogram
 Name[ta]=சொருகுப்பொருள்கள்
 Name[th]=โปรแกรมเสริม
 Name[tr]=Eklentiler
+Name[ug]=قىستۇرما
 Name[uk]=Додатки
 Name[uz]=Plaginlar
 Name[uz@cyrillic]=Плагинлар
