--- a/kcmconfigs/korganizer_configtime.desktop
+++ b/kcmconfigs/korganizer_configtime.desktop
@@ -55,6 +55,7 @@ Name[sl]=Čas in datum
 Name[sv]=Tid och datum
 Name[th]=เวลาและวันที่
 Name[tr]=Saat ve Tarih
+Name[ug]=ۋاقىت ۋە چېسلا
 Name[uk]=Час і дата
 Name[x-test]=xxTime and Datexx
 Name[zh_CN]=时间和日期
