--- a/kcmconfigs/korganizer_configviews.desktop
+++ b/kcmconfigs/korganizer_configviews.desktop
@@ -72,6 +72,7 @@ Name[ta]=காட்சிகள்
 Name[tg]=Намудҳо
 Name[th]=มุมมอง
 Name[tr]=Görünümler
+Name[ug]=كۆرۈنۈش
 Name[uk]=Перегляди
 Name[uz]=Koʻrinishlar
 Name[uz@cyrillic]=Кўринишлар
