SVN_SILENT made messages (.desktop file)

--- a/kcmconfigs/korganizer_configmain.desktop
+++ b/kcmconfigs/korganizer_configmain.desktop
@@ -68,6 +68,7 @@ Name[ru]=Главное
 Name[se]=Oppalaš
 Name[sk]=Všeobecné
 Name[sl]=Splošno
+Name[sq]=Të Përgjithshme
 Name[sv]=Allmänt
 Name[ta]=பொதுவான
 Name[th]=ค่าทั่วไป
