SVN_SILENT made messages (.desktop file)

--- a/kcmconfigs/korganizer_configmain.desktop
+++ b/kcmconfigs/korganizer_configmain.desktop
@@ -69,6 +69,10 @@ Name[se]=Oppalaš
 Name[sk]=Všeobecné
 Name[sl]=Splošno
 Name[sq]=Të Përgjithshme
+Name[sr]=Опште
+Name[sr@ijekavian]=Опште
+Name[sr@ijekavianlatin]=Opšte
+Name[sr@latin]=Opšte
 Name[sv]=Allmänt
 Name[ta]=பொதுவான
 Name[th]=ค่าทั่วไป
