SVN_SILENT made messages (.desktop file)

--- a/plugins/printing/journal/journalprint.desktop
+++ b/plugins/printing/journal/journalprint.desktop
@@ -93,7 +93,7 @@ Comment[nn]=Dette programtillegget lèt deg skriva ut dagboktekstar.
 Comment[pl]=Ta wtyczka pozwala drukować wpisy dziennika.
 Comment[pt]=Este diário permite-lhe imprimir os itens de diário.
 Comment[pt_BR]=Este plug-in permite-lhe imprimir entradas de diário.
-Comment[ru]=Этот модуль позволяет печатать журнал в виде дневника.
+Comment[ru]=Этот модуль позволяет печатать дневник.
 Comment[sk]=Tento modul umožní vytlačiť položky žurnálu (denníkové položky).
 Comment[sl]=Ta vstavek vam omogoča natis vnosov v dnevnik.
 Comment[sv]=Det här insticksprogrammet gör att du kan skriva ut journalanteckningar (dagboksanteckningar).
