--- a/plugins/datenums/datenums.desktop
+++ b/plugins/datenums/datenums.desktop
@@ -63,7 +63,7 @@ Comment[ca]=Per cada dia, aquest connector mostra el número de dia de l'any al 
 Comment[ca@valencia]=Per cada dia, este connector mostra el número de dia de l'any al capdamunt de la vista d'agenda. Per exemple, 1 de Febrer és el dia 32 de l'any.
 Comment[cs]=tento modul pro každý den zobrazuje pořadí dne v roce na vrcholu pohledu. Např. 1. únor je 32 druhý den v roce.
 Comment[da]=For hver dag viser dette plugin nummeret for dagen i året for oven i agendavisningen. For eksempel er 1. februar 1 is den 32. dag i året.
-Comment[de]=Für jeden Tag des Jahres wird mit diesem Modul der Kalendertag oben in der Tagesansicht angezeigt. Der 1. Februar ist beispielsweise der 32. Kalendertag des Jahres.
+Comment[de]=Für jeden Tag des Jahres wird mit diesem Modul der Kalendertag oben in der Terminplanansicht angezeigt. Der 1. Februar ist beispielsweise der 32. Kalendertag des Jahres.
 Comment[el]=Για κάθε μέρα, αυτό το πρόσθετο εμφανίζει τον αύξοντα αριθμό της ημέρας του έτους στην προβολή προγράμματος εργασίας. Για παράδειγμα, η 1ι Φεβρουαρίου είναι η ημέρα 32 του έτους.
 Comment[en_GB]=For each day this plugin shows its daynumber of the year at the top of the agenda view. For example, February 1 is day 32 of the year.
 Comment[es]=Para cada día, este complemento muestra su número de día en el año en la parte superior de la vista de agenda. Por ejemplo, el 1 de febrero es el día número 32 del año.
