SVN_SILENT made messages (.desktop file)

--- a/korgac/korgacagent.desktop
+++ b/korgac/korgacagent.desktop
@@ -21,6 +21,7 @@ Name[nl]=Herinneringsdaemon
 Name[pa]=ਰੀਮਾਈਡਰ ਡੈਮਨ
 Name[pt]=Servidor de Chamadas de Atenção
 Name[pt_BR]=Servidor de Lembretes
+Name[sl]=Pritajeni program za opomnike
 Name[sv]=Påminnelsedemon
 Name[tr]=Hatırlatma Servisi
 Name[uk]=Фонова служба нагадування
@@ -46,6 +47,7 @@ Comment[nds]=Anstötendämoon för Begeefnissen un Opgaven
 Comment[nl]=Herinneringsdaemon voor evenementen en taken
 Comment[pt]=Servidor de chamada de atenção dos eventos e tarefas
 Comment[pt_BR]=Servidor de lembretes dos eventos e tarefas
+Comment[sl]=Pritajeni program za opomnike glede dogodkov in opravil
 Comment[sv]=Påminnelsedemon för händelser och uppgifter
 Comment[tr]=Olay ve iş hatırlatma servisi
 Comment[uk]=Фонова служба нагадування про події і завдання
